# SolidStateCore

./: CMakeLists.txt  GuiApp.cpp  GuiApp.h  NumericalSolverSS.cpp  NumericalSolverSS.h  README.md  SolidStateConstants.h  SolidStateExport.h  SolidStateSystem.cpp  SolidStateSystem.h  animate_solidstate.py  documentation.txt  main.cpp  pch.h  solidstate_c_api.cpp  solidstate_c_api.h
